--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -22,6 +22,7 @@
 @import "components/navbar";
 @import "components/button";
 @import "components/hero";
+@import "components/footer";
 
 
 // utilities
